@@ -13,3 +13,6 @@ Credits
 
 * `Wouter vanden Hove <http://ugent.be>`_ (University of Gent) added
   support for uploading to multiple servers, using collective.dist.
+
+* `Godefroid Chapelle <http://bubblenet.be>`(BubbleNet) added /tag besides 
+  /tags for subversion
