@@ -1,0 +1,227 @@
+Detailed tests of svn.py
+========================
+
+.. :doctest:
+.. :setup: zest.releaser.tests.functional.setup_singular
+.. :teardown: zest.releaser.tests.functional.teardown
+
+Some initial imports:
+
+    >>> from zest.releaser import svn
+    >>> import commands
+    >>> import os
+
+Project name
+------------
+
+The prepared svn project has a setup.py, so the name in there is used:
+
+    >>> os.chdir(svnsourcedir)
+    >>> checkout = svn.Subversion(tags='tag')
+    >>> checkout.name
+    'tha.example'
+
+When the setup.py doesn't exist or doesn't return a proper name, we fall back
+to the name in the svn url before trunk/tag:
+
+    >>> orig = checkout.get_setup_py_name
+    >>> checkout.get_setup_py_name= lambda: None  # Hack
+    >>> checkout.name
+    'tha.example'
+    >>> checkout.get_setup_py_name = orig  # Restore hack
+
+
+Diff and commit
+---------------
+
+Make a change:
+
+    >>> setup_py = os.path.join(svnsourcedir, 'setup.py')
+    >>> open(setup_py, 'a').write('\na = 2\n')
+    >>> cmd = checkout.cmd_diff()
+    >>> cmd
+    'svn diff'
+    >>> print commands.getoutput(cmd)
+    Index: ...
+    ...
+    --- setup.py      (revision 3)
+    +++ setup.py      (working copy)
+    @@ -36,3 +36,5 @@
+               'console_scripts': [
+               ]},
+           )
+    +
+    +a = 2
+    
+Commit it:
+
+    >>> cmd = checkout.cmd_commit('small tweak')
+    >>> cmd
+    'svn commit -m "small tweak"'
+    >>> print commands.getoutput(cmd)
+    Sending        setup.py
+    ...
+    Transmitting file data...
+    Committed revision 4.
+
+Tags
+----
+
+Originally there are no tags:
+
+    >>> checkout.available_tags()
+    []
+
+Create a tag and it will show up:
+
+    >>> cmd = checkout.cmd_create_tag('0.1')
+    >>> cmd
+    'svn cp .../tha.example/trunk .../tha.example/tag/0.1 -m "Tagging 0.1"'
+    >>> dont_care = commands.getoutput(cmd)
+    >>> checkout.available_tags()
+    ['0.1']
+
+A tag url is important for subversion:
+
+    >>> checkout.tag_url('holadijee')
+    'file:.../tha.example/tag/holadijee'
+
+Make and commit a small change:
+
+    >>> open(setup_py, 'a').write('\nb = 3\n')
+    >>> cmd = checkout.cmd_commit('small tweak')
+    >>> print commands.getoutput(cmd)
+    Sending        setup.py
+    Transmitting file data .
+    Committed revision 6.
+
+Now we can request the changes since a specific tag:
+
+    >>> cmd = checkout.cmd_diff_last_commit_against_tag('0.1')
+    >>> cmd
+    'svn diff .../tha.example/tag/0.1 .../tha.example/trunk'
+    >>> print commands.getoutput(cmd)
+    Index: setup.py
+    ===================================================================
+    --- setup.py      (.../tag/0.1)  (revision 6)
+    +++ setup.py      (.../trunk)     (revision 6)
+    @@ -38,3 +38,5 @@
+           )
+    <BLANKLINE>
+     a = 2
+    +
+    +b = 3
+
+
+Making a tag checkout
+---------------------
+
+For checking out a tag, we first need a temp folder to do the checkout in:
+
+    >>> temp = checkout.prepare_checkout_dir('somename')
+    >>> temp
+    '...somename...'
+
+And make a tag checkout:
+
+    >>> cmd = checkout.cmd_checkout_from_tag('0.1', temp)
+    >>> cmd
+    'svn co .../tha.example/tag/0.1 ...somename...'
+    >>> print commands.getoutput(cmd)
+    A    ...somename.../local-checkouts
+    A    ...somename.../grok-1.0a4.cfg
+    A    ...somename.../TODO.txt
+    A    ...somename.../bootstrap.py
+    A    ...somename.../buildout.cfg
+    A    ...somename.../CHANGES.txt
+    A    ...somename.../setup.py
+    A    ...somename.../src
+    A    ...somename.../src/tha
+    A    ...somename.../src/tha/__init__.py
+    A    ...somename.../src/tha/example
+    A    ...somename.../src/tha/example/USAGE.txt
+    A    ...somename.../src/tha/example/tests
+    A    ...somename.../src/tha/example/tests/sample.txt
+    A    ...somename.../src/tha/example/tests/__init__.py
+    A    ...somename.../src/tha/example/tests/test.py
+    A    ...somename.../src/tha/example/__init__.py
+    A    ...somename.../README.txt
+    Checked out revision 6.
+
+
+Tag corner cases
+----------------
+
+Both corner cases do a ``sys.exit()``.  This method has been monkey patched by
+the test setup.
+
+    >>> import sys
+    >>> sys.exit(1)
+    Traceback (most recent call last):
+    ...
+    RuntimeError: SYSTEM EXIT (code=1)
+    
+The information on tags is stored on the server, not locally.  So a network
+connection is needed.  When there's a network problem, it is reported:
+
+    >>> # Internal-detail hack
+    >>> orig = checkout._cached_url
+    >>> checkout._cached_url = 'http://non.existing/nonexisting/trunk'
+    >>> # Actual call
+    >>> checkout.available_tags()
+    Traceback (most recent call last):
+    ...
+    RuntimeError: SYSTEM EXIT (code=None)
+    >>> checkout._cached_url = orig
+
+Subversion stores tags in the /tag directory.  Just a convention.  Sometimes
+projects have only a /trunk set up and no tag directory yet.
+
+Set up a new sample project in the repository:
+
+    >>> repo_url
+    'file://.../svnrepo-singular'
+    >>> cmd = 'svn mkdir %s/sample -m "mkdir"' % repo_url
+    >>> dont_care = commands.getoutput(cmd)
+    >>> cmd = 'svn mkdir %s/sample/trunk -m "mkdir"' % repo_url
+    >>> dont_care = commands.getoutput(cmd)
+
+Make a checkout:
+
+    >>> os.chdir(tempdir)
+    >>> cmd = 'svn co %s/sample/trunk sample' % repo_url
+    >>> dont_care = commands.getoutput(cmd)
+    >>> os.chdir('sample')
+
+Now look up the tags.  This asks us to create the tag/ directory.  For the
+answering, set up the answer test mode:
+
+    >>> from zest.releaser import utils
+    >>> utils.TESTMODE = True
+    >>> sample_checkout = svn.Subversion(tags='tag')
+
+Answer 'no' the first time we get asked to create the directory.  This means
+zest.releaser has no business with this project, so exit.
+
+    >>> utils.answers_for_testing = ['n']
+    >>> sample_checkout.available_tags()
+    Traceback (most recent call last):
+    ...
+    RuntimeError: SYSTEM EXIT (code=0)
+
+Answer 'yes' and the tags dir gets created.  The available tags result is
+obviously an empty list:
+
+    >>> utils.answers_for_testing = ['y']
+    >>> sample_checkout.available_tags()
+    tags dir does not exist at file:...svnrepo-singular/sample/tag
+    Question: Shall I create it (Y/n)?
+    Our reply: y
+    <BLANKLINE>
+    Committed revision 9.
+    []
+    >>> cmd = 'svn list %s/sample' % repo_url
+    >>> print commands.getoutput(cmd)
+    tag/
+    trunk/
+
